compiler/testData/diagnostics/tests/when/kt9929.fir.kt
// !WITH_NEW_INFERENCE
val test: Int = <!INITIALIZER_TYPE_MISMATCH!>if (true) {
    when (2) {
        1 -> 1
        else -> null
    }
}
else {
    2
}<!>
